@@ -4,12 +4,49 @@ import java.util.List;
 
 import name.abuchen.portfolio.model.AccountTransaction;
 import name.abuchen.portfolio.model.PortfolioTransaction;
+import name.abuchen.portfolio.model.Security;
 import name.abuchen.portfolio.model.Transaction;
 import name.abuchen.portfolio.money.CurrencyConverter;
 
 /* package */abstract class Calculation
 {
+    private Security security;
     private String termCurrency;
+
+    /**
+     * Prepare calculations.
+     */
+    public void prepare()
+    {
+    }
+
+    /**
+     * Finish up all calculations.
+     */
+    public void finish(CurrencyConverter converter, List<CalculationLineItem> lineItems)
+    {
+    }
+
+    /**
+     * Gets the underlying {@link Security}.
+     * 
+     * @return {@link Security} on success, else null
+     */
+    public Security getSecurity()
+    {
+        return this.security;
+    }
+
+    /**
+     * Sets the underlying {@link Security}.
+     * 
+     * @param security
+     *            {@link Security} (can be null)
+     */
+    public void setSecurity(Security security)
+    {
+        this.security = security;
+    }
 
     public String getTermCurrency()
     {
@@ -21,48 +58,63 @@ import name.abuchen.portfolio.money.CurrencyConverter;
         this.termCurrency = termCurrency;
     }
 
-    public void visit(CurrencyConverter converter, DividendInitialTransaction t)
-    {}
-
-    public void visit(CurrencyConverter converter, DividendFinalTransaction t)
-    {}
-
-    public void visit(CurrencyConverter converter, DividendTransaction t)
-    {}
-
-    public void visit(CurrencyConverter converter, PortfolioTransaction t)
-    {}
-
-    public void visit(CurrencyConverter converter, AccountTransaction t)
-    {}
-
-    public final void visitAll(CurrencyConverter converter, List<? extends Transaction> transactions)
+    public void visit(CurrencyConverter converter, CalculationLineItem.ValuationAtStart t)
     {
-        for (Transaction t : transactions)
+    }
+
+    public void visit(CurrencyConverter converter, CalculationLineItem.ValuationAtEnd t)
+    {
+    }
+
+    public void visit(CurrencyConverter converter, CalculationLineItem.DividendPayment t)
+    {
+    }
+
+    public void visit(CurrencyConverter converter, CalculationLineItem.TransactionItem item, PortfolioTransaction t)
+    {
+    }
+
+    public void visit(CurrencyConverter converter, CalculationLineItem.TransactionItem item, AccountTransaction t)
+    {
+    }
+
+    /* package */ final void visitAll(CurrencyConverter converter, List<CalculationLineItem> lineItems)
+    {
+        for (CalculationLineItem item : lineItems)
         {
-            if (t instanceof DividendInitialTransaction)
-                visit(converter, (DividendInitialTransaction) t);
-            else if (t instanceof DividendFinalTransaction)
-                visit(converter, (DividendFinalTransaction) t);
-            else if (t instanceof DividendTransaction)
-                visit(converter, (DividendTransaction) t);
-            else if (t instanceof PortfolioTransaction)
-                visit(converter, (PortfolioTransaction) t);
-            else if (t instanceof AccountTransaction)
-                visit(converter, (AccountTransaction) t);
+            if (item instanceof CalculationLineItem.ValuationAtStart)
+                visit(converter, (CalculationLineItem.ValuationAtStart) item);
+            else if (item instanceof CalculationLineItem.ValuationAtEnd)
+                visit(converter, (CalculationLineItem.ValuationAtEnd) item);
+            else if (item instanceof CalculationLineItem.DividendPayment)
+                visit(converter, (CalculationLineItem.DividendPayment) item);
+            else if (item instanceof CalculationLineItem.TransactionItem)
+            {
+                Transaction tx = ((CalculationLineItem.TransactionItem) item).getTransaction()
+                                .orElseThrow(IllegalArgumentException::new);
+                if (tx instanceof PortfolioTransaction)
+                    visit(converter, (CalculationLineItem.TransactionItem) item, (PortfolioTransaction) tx);
+                else if (tx instanceof AccountTransaction)
+                    visit(converter, (CalculationLineItem.TransactionItem) item, (AccountTransaction) tx);
+                else
+                    throw new UnsupportedOperationException();
+            }
             else
                 throw new UnsupportedOperationException();
         }
     }
 
-    public static <T extends Calculation> T perform(Class<T> type, CurrencyConverter converter,
-                    List<? extends Transaction> transactions)
+    public static <T extends Calculation> T perform(Class<T> type, CurrencyConverter converter, Security security,
+                    List<CalculationLineItem> lineItems)
     {
         try
         {
-            T thing = type.newInstance();
+            T thing = type.getDeclaredConstructor().newInstance();
+            thing.setSecurity(security);
             thing.setTermCurrency(converter.getTermCurrency());
-            thing.visitAll(converter, transactions);
+            thing.prepare();
+            thing.visitAll(converter, lineItems);
+            thing.finish(converter, lineItems);
             return thing;
         }
         catch (Exception e)
